# open-tts-studio

./: .gitignore  README.md
apps/api/: README.md  pyproject.toml
apps/api/tests/: test_api_access.py  test_audio_assets.py  test_f5_tts_adapter.py  test_gptsovits_adapter.py  test_health.py  test_indextts2_adapter.py  test_indextts2_worker.py  test_jobs.py  test_model_directories.py  test_model_instances.py  test_model_packages.py  test_projects.py  test_registry.py  test_runtime_controls.py  test_runtime_memory.py  test_settings_api.py  test_speech_api.py  test_system_status.py  test_tasks.py  test_voice_quality.py  test_voices.py  test_voxcpm2_adapter.py
apps/api/tools/: indextts2_worker.py  run_indextts2.py
apps/api/tts_api/: audio.py  config.py  errors.py  jobs.py  main.py  model_capabilities.py  model_health.py  model_instances.py  model_packages.py  projects.py  registry.py  runtime_memory.py  schemas.py  system_monitor.py  voice_library.py  voice_quality.py
apps/api/tts_api/adapters/: __init__.py  base.py  f5_tts.py  gptsovits.py  indextts2.py  indextts2_worker.py  mock.py  voxcpm2.py
apps/api/tts_api/routes/: __init__.py  audio_assets.py  health.py  jobs.py  model_directories.py  model_instances.py  model_packages.py  models.py  outputs.py  projects.py  runtime.py  settings.py  speech.py  system.py  tasks.py  voices.py
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/electron/: bilibili-sampler-runtime.cjs  bilibili-sampler-runtime.test.cjs  (+9 more)
docs/: api-examples.md
model-registry/: models.json
models/: .gitignore  README.md
(+10 files in other folders)
